<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.amuday.yeelightcontrol.PreferencesFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/item_ssid">

            <TextView
                android:text="@string/select_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_select_ssid"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:text="@string/selected_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_selected_ssid"
                android:layout_weight="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/item_bulb">

            <TextView
                android:text="@string/select_bulb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_select_bulb"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:text="@string/selected_bulb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_selected_bulb"
                android:layout_weight="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/item_sampling_rate">

            <TextView
                android:text="@string/sampling_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_sampling_rate"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="3"
                android:id="@+id/seek_bar_sampling_rate"
                android:layout_weight="1" />

            <TextView
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_sampling_rate"
                android:layout_weight="1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/item_threshold">

            <TextView
                android:text="@string/threshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_threshold"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seek_bar_threshold"
                android:layout_weight="1"
                android:max="100" />

            <TextView
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_threshold"
                android:layout_weight="1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:text="@string/start_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_start_stop"
            android:layout_weight="1"
            android:enabled="false" />

    </LinearLayout>


</FrameLayout>
